--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 div.content{
- background:url('/coxy/img/giostra.png');
+ background:url('/img/giostra.png');
  background-repeat:no-repeat;
  width:893px;
  height:552px;
