--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@ div.content{
  background-repeat:no-repeat;
  width:893px;
  height:552px;
+ display:none;
 }
 
 img.scotchright{
@@ -38,3 +39,13 @@ img.link{
  top:30px;
  cursor:pointer;
 }
+
+img.link:hover{
+ #width:10%;
+ #height:10%;
+}
+
+div.book{
+ left:-100%;
+}
+
